# public/openapi.yaml
@@ -173,7 +173,7 @@ components:
           type: number
           description: X coordinate of the shot.
           minimum: 0
-          maximum: 800
+          maximum: 1024
         y:
           type: number
           description: Y coordinate of the shot.
@@ -207,7 +207,7 @@ components:
           type: number
           description: X coordinate of the target.
           minimum: 0
-          maximum: 800
+          maximum: 1024
         y:
           type: number
           description: Y coordinate of the target.
